# avrocheck

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  avrocheck.nix  bundle.sh  setup.sh
cmake/: FindAvroCPP.cmake  avrogen.cmake
src/: CMakeLists.txt  avro_reader.h  main.cc  schemas.h  stats.cc  stats.h
src/avro/: bss_hint_sched_tvbeat.avsc  disref_cust_card_sum_hist_tvbeat.avsc  nds_programme_key_tvbeat.avsc  ods_ams_plus_tvbeat.avsc  ods_ams_q_tvbeat.avsc  olive_sport_meta_tvbeat.avsc  oss_bss_epg_sched_tvbeat.avsc  service_key_attr_descr_tvbeat.avsc  service_key_attr_ods_tvbeat.avsc  service_key_code_map_tvbeat.avsc  trp_sport_meta_tvbeat.avsc  vod_asset_tvbeat.avsc
